test/scc/decl/semantic-errors/012.a
012.t:1:11: error: incomplete type is not allowed